include/opencv_generated.hpp

bool cv_checkHardwareSupport(int feature);
void cv_circle(Mat* img, Point* center, int radius, Scalar* color, int thickness, int lineType, int shift);
float cv_cubeRoot(float val);
void cv_ellipse(Mat* img, Point* center, Size* axes, double angle, double startAngle, double endAngle, Scalar* color, int thickness, int lineType, int shift);
void cv_ellipse5(Mat* img, RotatedRect* box, Scalar* color, int thickness, int lineType);
float cv_fastAtan2(float y, float x);
int64 cv_getTickCount();
double cv_getTickFrequency();
void cv_line(Mat* img, Point* pt1, Point* pt2, Scalar* color, int thickness, int lineType, int shift);
void cv_putText(Mat* img, String* text, Point* org, int fontFace, double fontScale, Scalar* color, int thickness, int lineType, bool bottomLeftOrigin);
void cv_rectangle(Mat* img, Point* pt1, Point* pt2, Scalar* color, int thickness, int lineType, int shift);
void cv_sqrt(Mat* src, Mat* dst);